--- a/src/components/profile/userprofile.css
+++ b/src/components/profile/userprofile.css
@@ -1,14 +1,14 @@
-section.single-post {
+section.user-profile {
 	width: 100%;
 }
 
-section.single-post .container-fluid {
+section.user-profile .container-fluid {
 	width: 100%;
 	padding-top: 200px;
 	padding-inline: 60px;
 }
 
-section.single-post .container-fluid h1 {
+section.user-profile .container-fluid h1 {
 	font-family: "ESAllianz-Regular", sans-serif;
 	font-weight: 500;
 	font-style: normal;
@@ -16,10 +16,4 @@ section.single-post .container-fluid h1 {
 	line-height: 6rem;
 	letter-spacing: 0em;
 	text-align: left;
-}
-
-section.single-post .container-fluid img {
-	width: 600px;
-	height: 400px;
-	object-fit: cover;
 }
