--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,14 +1,21 @@
 section.header {
 	width: 100%;
+	max-height: 100vh;
 }
 
 section.header .container-fluid {
 	width: 100%;
-	padding-top: 200px;
-	padding-inline: 60px;
+	padding-top: 60px;
+	padding-left: 60px;
+	margin: 0;
 }
 
-section.header .container-fluid h1 {
+section.header .container-fluid .heading {
+	padding-top: 60px;
+	padding-inline: 160px;
+}
+
+section.header .container-fluid .heading h1 {
 	font-family: "ESAllianz-Regular", sans-serif;
 	font-weight: 500;
 	font-style: normal;
@@ -16,4 +23,37 @@ section.header .container-fluid h1 {
 	line-height: 6rem;
 	letter-spacing: 0em;
 	text-align: left;
+}
+
+section.header .container-fluid .heading p {
+	padding-right: 100px;
+	color: rgba(0, 0, 0, 0.6);
+	font-family: var(--s-font-ecbb00d0);
+	font-size: 14px;
+	font-weight: 400;
+	height: auto;
+	line-height: 1.6;
+	margin: 35px 0px 0px 0px;
+	text-align: justify;
+	width: 600px;
+	max-width: 100%;
+}
+
+section.header .container-fluid .heading span {
+	padding-right: 100px;
+	font-size: 24px;
+	font-weight: 400;
+	height: auto;
+	line-height: 1.6;
+	margin: 60px 0px 0px 0px;
+	text-align: justify;
+	width: 600px;
+	max-width: 100%;
+}
+
+section.header .container-fluid img {
+	width: 100%;
+	max-height: 90vh;
+	margin: 0;
+	padding: 0;
 }
