--- a/src/components/loading/spinner.css
+++ b/src/components/loading/spinner.css
@@ -11,10 +11,27 @@
 	align-items: center;
 }
 
+.miniLoadingSpinnerContainer {
+	background-color: transparent;
+	z-index: 5000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .loadingSpinner {
 	width: 64px;
 	height: 64px;
 	border: 8px solid;
+	border-color: #000 transparent #555 transparent;
+	border-radius: 50%;
+	animation: spin 1.2s linear infinite;
+}
+
+.miniLoadingSpinner {
+	width: 40px;
+	height: 40px;
+	border: 4px solid;
 	border-color: #000 transparent #555 transparent;
 	border-radius: 50%;
 	animation: spin 1.2s linear infinite;
