--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,12 @@
 nav {
 	display: flex;
-	height: 100px;
+	height: 60px;
 	font-family: "ESAllianz-Regular", sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	background-color: #fff;
-	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
+	/* border-bottom: 1px solid #000 !important; */
 }
 
 nav .container-fluid {
@@ -16,14 +17,18 @@ nav .container-fluid {
 	justify-content: space-between;
 }
 
-nav .nav-brand {
-	font-family: "ESAllianz-Regular", sans-serif;
-	width: 100%;
-	font-size: 22px;
-	font-weight: 600;
-	line-height: 39px;
-	letter-spacing: 0em;
-	text-align: start;
+nav .nav-brand p {
+	font-family: "Be Vietnam Pro", sans-serif;
+	font-size: 17px;
+	font-weight: 700;
+	height: auto;
+	letter-spacing: 0.38em;
+	line-height: 1.4;
+	text-align: center;
+	width: auto;
+	max-width: 100%;
+	justify-content: center;
+	text-transform: capitalize;
 }
 
 nav .nav-items {
@@ -33,12 +38,44 @@ nav .nav-items {
 }
 
 nav .nav-items .item {
-	font-family: "ESAllianz-Regular", sans-serif;
-	padding: 5px 0;
+	font-family: "Be Vietnam Pro", sans-serif;
+	font-size: 13px;
+	font-weight: 500;
+	height: auto;
+	line-height: 1.4;
 	text-align: center;
-	margin-inline: 30px;
-	font-size: 18px;
-	cursor: pointer;
+	width: auto;
+	max-width: 100%;
+	justify-content: center;
+	text-transform: capitalize;
+}
+
+nav .search .search-box {
+	width: 300px;
+	display: flex;
+	align-items: center;
+	text-align: start;
+	border-radius: 4px;
+	border: 1px solid rgba(0, 0, 0, 0.1) !important;
+}
+
+nav .search .search-box input {
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 12px;
+	width: 100%;
+	padding-block: 5px;
+	padding-inline: 15px;
+	text-align: start;
+	border-radius: 4px;
+	border: none;
+}
+
+nav .search .search-box .search-icon {
+	margin-right: 5px;
+}
+
+nav .search .search-box input:focus {
+	outline: none;
 }
 
 nav .nav-items .item:first-child {
@@ -47,20 +84,6 @@ nav .nav-items .item:first-child {
 	text-align: center;
 	margin-inline: 0px;
 	cursor: pointer;
-}
-
-nav .nav-items .item .search-box {
-	font-family: "ESAllianz-Regular", sans-serif;
-	padding: 5px 0;
-	text-align: start;
-	margin-inline: 7%;
-	font-size: 18px;
-	border: none;
-	border-bottom: 1px solid#000;
-}
-
-nav .nav-items .item .search-box:focus {
-	outline: none;
 }
 
 nav .nav-items .nav-dropdown {
@@ -83,16 +106,15 @@ nav .nav-items .nav-dropdown li:last-child {
 }
 
 nav .nav-items .item-btn button {
-	font-family: "ESAllianz-Regular", sans-serif;
-	width: 150px;
-	height: 50px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border-radius: 0%;
+	font-family: "Be Vietnam Pro", sans-serif;
+	font-size: 13px;
+	font-weight: 500;
+	line-height: 1.4;
 	text-align: center;
-	margin-inline: 12%;
-	font-size: 16px;
+	width: auto;
+	max-width: 100%;
+	justify-content: center;
+	text-transform: capitalize;
 }
 
 .link {
