--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 section.header {
 	width: 100%;
-	max-height: 100vh;
+	min-height: 100vh;
 }
 
 section.header .container-fluid {
@@ -10,9 +10,25 @@ section.header .container-fluid {
 	margin: 0;
 }
 
+@media only screen and (max-width: 768px) {
+	section.header .container-fluid {
+		width: 100%;
+		padding-top: 60px;
+		padding-left: 10px;
+		margin: 0;
+	}
+}
+
 section.header .container-fluid .heading {
 	padding-top: 60px;
 	padding-inline: 160px;
+}
+
+@media only screen and (max-width: 768px) {
+	section.header .container-fluid .heading {
+		padding-top: 60px;
+		padding-inline: 30px;
+	}
 }
 
 section.header .container-fluid .heading h1 {
@@ -56,4 +72,13 @@ section.header .container-fluid img {
 	max-height: 90vh;
 	margin: 0;
 	padding: 0;
+}
+
+@media only screen and (max-width: 768px) {
+	section.header .container-fluid img {
+		width: 100%;
+		max-height: 90vh;
+		margin: 0;
+		padding: 0;
+	}
 }
