--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -196,7 +196,7 @@ nav .nav-items .item-btn button {
 	width: 150px;
 	height: 50px;
 	display: flex;
-	justify-content: center;
 	align-items: center;
+	text-align: left !important;
 	border-radius: 0%;
 }
