--- a/src/components/posts/explorepost.css
+++ b/src/components/posts/explorepost.css
@@ -32,20 +32,17 @@ section.explore-post .container-fluid .heading .icon {
 	padding: 0;
 }
 
-/* section.explore-post .container-fluid .card {
-} */
-
 section.explore-post .container-fluid .card {
 	width: 100%;
 	padding: 10px;
 	margin-bottom: 10px;
 	border: none;
-	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+	/* box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px; */
 }
 
 section.explore-post .container-fluid .card img {
 	width: 100%;
-	height: 290px;
+	height: 216px;
 	border-radius: 10px;
 	object-fit: cover;
 }
@@ -56,13 +53,54 @@ section.explore-post .container-fluid .card .card-body {
 	color: #000;
 }
 
-section.explore-post .container-fluid .card p {
-	padding-top: 10px;
-	font-family: "ESAllianz-Regular", sans-serif;
-	font-weight: 400;
+section.explore-post .container-fluid .card .post-title {
+	padding-top: 5px;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-style: normal;
-	font-size: 1.4rem;
-	line-height: 1.2777777777778;
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
+
+section.explore-post .container-fluid .card .post-category {
+	padding-top: 10px;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0rem;
+	color: #767677;
+}
+
+section.explore-post .container-fluid .card .post-desc {
+	margin-bottom: 10px;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
+
+section.explore-post .container-fluid .card .price p {
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
+
+section.explore-post .container-fluid .card .price span {
+	display: flex;
+	float: right;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
 	letter-spacing: 0rem;
 }
 
@@ -78,6 +116,7 @@ section.explore-post .container-fluid .explore h2 {
 	font-size: 2rem;
 	line-height: 1.2777777777778;
 	letter-spacing: 0rem;
+	background-color: #000;
 }
 
 section.explore-post .container-fluid .explore img {
