--- a/src/components/comment/createcomment.css
+++ b/src/components/comment/createcomment.css
@@ -36,3 +36,24 @@
 .comment-form .form-input input:focus {
 	outline: none;
 }
+
+.comment-form .form-input input.currency {
+	width: 30%;
+	height: 34px;
+	padding: 4px 12px;
+	margin-top: 12px;
+	border: 1px solid #000;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 1.6;
+	border-radius: 50px;
+}
+
+.comment-form .form-input button {
+	float: right;
+	margin-top: 12px;
+	padding-block: 4px;
+	padding-inline: 16px;
+	border-radius: 50px;
+}
