--- a/src/components/comment/featuredcomment.css
+++ b/src/components/comment/featuredcomment.css
@@ -32,57 +32,78 @@ section.featured-comment .container-fluid .heading .icon {
 	padding: 0;
 }
 
-/* section.explore-post .container-fluid .card {
-} */
-
 section.featured-comment .container-fluid .card {
 	width: 100%;
-	padding: 10px;
+	min-height: 100px;
+	/* padding: 14px 20px; */
 	margin-bottom: 10px;
 	border: none;
-	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
-
-section.featured-comment .container-fluid .card img {
-	width: 100%;
-	height: 290px;
+	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 	border-radius: 10px;
-	object-fit: cover;
 }
 
 section.featured-comment .container-fluid .card .card-body {
+	width: 100%;
 	margin: 0;
 	padding: 0;
 	color: #000;
 }
 
-section.featured-comment .container-fluid .card p {
-	padding-top: 10px;
-	font-family: "ESAllianz-Regular", sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	font-size: 1.4rem;
-	line-height: 1.2777777777778;
-	letter-spacing: 0rem;
-}
-
-section.featured-comment .container-fluid .explore {
-	margin-top: 60px;
-}
-
-section.featured-comment .container-fluid .explore h2 {
-	padding-bottom: 20px;
-	font-family: "ESAllianz-Regular", sans-serif;
-	font-weight: 400;
-	font-style: normal;
-	font-size: 2rem;
-	line-height: 1.2777777777778;
-	letter-spacing: 0rem;
-}
-
-section.featured-comment .container-fluid .explore img {
+section.featured-comment .container-fluid .card .card-body .row {
 	width: 100%;
-	height: 500px;
-	border-radius: 0;
+	margin: 0;
+	padding: 0;
+}
+
+section.featured-comment .container-fluid .card .card-body .product-img-wrapper {
+	padding: 0;
+}
+
+section.featured-comment .container-fluid .card .card-body .product-img-wrapper .product-img {
+	width: 100%;
+	height: 100%;
 	object-fit: cover;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+
+section.featured-comment .container-fluid .card .card-body .user-info-wrapper {
+	padding: 10px;
+}
+
+section.featured-comment .container-fluid .card .card-body .user-info-wrapper .user-img {
+	width: 36px;
+	height: 36px;
+	border-radius: 100pxx;
+	object-fit: cover;
+	margin-right: 10px;
+}
+
+section.featured-comment .container-fluid .card .card-body .user-info {
+	display: flex;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	height: auto;
+}
+
+section.featured-comment .container-fluid .card .card-body p {
+	padding-top: 10px;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
+
+section.featured-comment .container-fluid .card .card-body .card-link {
+	float: right;
+	padding-top: 10px;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0rem;
 }
