[DEV] modified auth pages and featured feedback component

--- a/src/components/dailyfeedback/dailyfeedback.css
+++ b/src/components/dailyfeedback/dailyfeedback.css
@@ -25,3 +25,97 @@ section.daily-feedback .container-fluid .heading h1 {
 	font-size: 1.5em;
 	font-weight: bold;
 }
+
+section.daily-feedback .container-fluid .card {
+	height: 146px;
+	background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("https://images.pexels.com/photos/1070360/pexels-photo-1070360.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2");
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	border-radius: 12px;
+}
+
+section.daily-feedback .container-fluid .card .card-body {
+	padding: 10px;
+}
+
+section.daily-feedback .container-fluid .card .card-body .product-name {
+	width: fit-content;
+	padding-inline: 12px;
+	padding-block: 2px;
+	color: #fff;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 20px;
+	letter-spacing: 0rem;
+	background-color: #000;
+	border-radius: 6px;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper {
+	width: 100%;
+	position: absolute;
+	bottom: 10px;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper .comment-body {
+	margin-bottom: 12px;
+	color: #fff;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 16px;
+	font-weight: 500;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper .comment-info {
+	display: flex;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper .comment-info .user-info {
+	display: flex;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper .comment-info .user-info img {
+	margin-right: 6px;
+	width: 34px;
+	height: 34px;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper .comment-info .user-info .user-firstname {
+	color: #fff;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 12px;
+	font-weight: 500;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper .comment-info .user-info .created-at {
+	color: #fff;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 10px;
+	font-weight: 400;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
+
+section.daily-feedback .container-fluid .card .card-body .comment-wrapper .like-info {
+	color: #fff;
+	position: absolute;
+	right: 20px;
+	bottom: 0;
+	display: flex;
+	justify-content: flex-end;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 12px;
+	font-weight: 500;
+	line-height: 20px;
+	letter-spacing: 0rem;
+}
