--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -1,47 +1,128 @@
-section.login-form {
-	position: absolute;
-	top: 50%;
-	left: 50%;
+section.login {
+	width: 100%;
+}
+
+section.login .container-fluid {
+	width: 100%;
+	margin: 0;
+}
+
+section.login .container-fluid .row {
+	width: 100%;
+	height: 100vh;
+}
+
+section.login .container-fluid .row .welcome-column {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding-inline: 0px;
+}
+
+section.login .container-fluid .row .welcome-column h1 {
+	font-family: "Be Vietnam Pro", sans-serif;
+	font-size: 28px;
+	font-weight: 700;
+	letter-spacing: 0.38em;
+	line-height: 1.4;
+	text-align: left;
+	text-transform: uppercase;
+}
+
+section.login .container-fluid .row .welcome-column span.divider {
+	border-left: 3px solid #000;
+	height: 20px;
+	margin-right: 20px;
+}
+
+section.login .container-fluid .row .welcome-column span.text {
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 28px;
+	letter-spacing: 0em;
+	text-align: left;
+	text-transform: capitalize;
+}
+
+section.login .container-fluid .row .login-column {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+section.login .container-fluid .row .login-form {
 	width: 400px;
 	padding: 40px;
-	transform: translate(-50%, -50%);
 	background: #fff;
 	box-sizing: border-box;
 	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 	border-radius: 10px;
 }
 
-section.login-form h2 {
-	margin: 0 0 30px;
+section.login .container-fluid .row .login-form .heading {
+	margin-bottom: 60px;
+}
+
+section.login .container-fluid .row .login-form .heading h2 {
+	margin: 0 0 20px;
 	color: #000;
-	text-align: center;
+	text-align: left;
 	font-family: "ESAllianz-Regular", sans-serif;
-	font-weight: 400;
+	font-weight: 600;
 	font-style: normal;
 	font-size: 1.7rem;
-	line-height: 1.2777777777778;
 	letter-spacing: 0rem;
 }
 
-section.login-form .input-group {
+section.login .container-fluid .row .login-form .heading p {
+	margin: 0 0 10px;
+	color: #000;
+	text-align: left;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 14px;
+	letter-spacing: 0rem;
+}
+
+section.login .container-fluid .row .login-form .heading .link {
+	color: #1473e6;
+}
+
+.login-form .input-group {
 	position: relative;
 }
 
-section.login-form .input-group input {
+.login-form .input-group input {
 	width: 100%;
 	padding: 10px 0;
 	font-size: 14px;
 	color: #000;
 	margin-bottom: 30px;
 	border: none;
-	border-bottom: 1px solid #000;
+	border-bottom: 1px solid #eaeaea;
 	outline: none;
 	background: transparent;
 	font-family: "ESAllianz-Regular", sans-serif;
 	letter-spacing: 0rem;
 }
 
-section.login-form .input-group label {
+.login-form .input-group input:focus {
+	width: 100%;
+	padding: 10px 0;
+	font-size: 14px;
+	color: #000;
+	margin-bottom: 30px;
+	border: none;
+	border-bottom: 1px solid #1473e6;
+	outline: none;
+	background: transparent;
+	font-family: "ESAllianz-Regular", sans-serif;
+	letter-spacing: 0rem;
+}
+
+.login-form .input-group label {
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -54,15 +135,15 @@ section.login-form .input-group label {
 	transition: 0.3s;
 }
 
-section.login-form .input-group input:focus ~ label,
-section.login-form .input-group input:valid ~ label {
+.login-form .input-group input:focus ~ label,
+.login-form .input-group input:valid ~ label {
 	top: -20px;
 	left: 0;
 	color: #000;
 	font-size: 12px;
 }
 
-section.login-form button {
+.login-form button {
 	font-family: "ESAllianz-Regular", sans-serif;
 	width: 100px;
 	height: 40px;
