--- a/src/components/comment/comment.css
+++ b/src/components/comment/comment.css
@@ -11,6 +11,8 @@
 }
 
 .comment .comment-detail {
+	display: flex;
+	justify-content: space-between;
 	width: 100%;
 	padding-left: 12px;
 	font-family: "ESAllianz-Regular", sans-serif;
@@ -25,6 +27,15 @@
 	font-family: "ESAllianz-Regular", sans-serif;
 	font-size: 14px;
 	font-weight: 400;
+	height: auto;
+	line-height: 1.6;
+}
+
+.comment .comment-detail .date span {
+	margin-top: 2px;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 600;
 	height: auto;
 	line-height: 1.6;
 }
@@ -51,4 +62,14 @@
 	border-radius: 50px;
 	color: #fff;
 	background-color: #000;
+}
+
+.comment .comment-detail .like {
+	background-color: transparent;
+	border: none;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	height: auto;
+	line-height: 1;
 }
