--- a/src/components/post/singlepost.css
+++ b/src/components/post/singlepost.css
@@ -9,6 +9,12 @@ section.single-post .main {
 	margin-right: 439px;
 }
 
+@media only screen and (max-width: 992px) {
+	section.single-post .main {
+		margin-right: 0px;
+	}
+}
+
 section.single-post .main .heading img {
 	width: 100%;
 	height: 100vh;
@@ -17,7 +23,7 @@ section.single-post .main .heading img {
 
 section.single-post .main .container-fluid {
 	width: 100%;
-	margin-top: 40px;
+	margin-top: 20px;
 	padding-inline: 30px;
 }
 
@@ -26,6 +32,108 @@ section.single-post .main .container-fluid .product-name h1 {
 	font-size: 44px;
 	font-weight: 500;
 	line-height: 1.6;
+}
+
+section.single-post .main .container-fluid .post-detail {
+	display: flex;
+	justify-content: space-between;
+	background-color: transparent;
+	margin-bottom: 20px;
+}
+
+section.single-post .main .container-fluid .post-detail .user {
+	display: flex;
+	align-items: center;
+}
+
+section.single-post .main .container-fluid .post-detail .user .user-profile img {
+	width: 48px;
+	height: 48px;
+	margin-right: 10px;
+	border-radius: 100%;
+	object-fit: cover;
+}
+
+section.single-post .main .container-fluid .post-detail .user .user-info {
+	display: flex;
+	align-items: center;
+}
+
+section.single-post .main .container-fluid .post-detail .user .user-info .username {
+	margin-bottom: 6px;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	height: auto;
+	line-height: 1;
+}
+
+section.single-post .main .container-fluid .post-detail .user .user-info .created-at {
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	height: auto;
+	line-height: 1;
+}
+
+section.single-post .main .container-fluid .post-detail .follow-user {
+	display: flex;
+	align-items: center;
+	height: 38px;
+	background-color: transparent;
+	padding-inline: 14px;
+	padding-block: 6px;
+	margin-left: 20px;
+	border: 1px solid #000;
+	border-radius: 50px;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 1;
+}
+
+section.single-post .main .container-fluid .post-detail .post-option {
+	display: flex;
+	align-items: center;
+}
+
+section.single-post .main .container-fluid .post-detail .post-option .like-post {
+	height: 38px;
+	background-color: transparent;
+	padding-inline: 12px;
+	padding-block: 6px;
+	margin-right: 10px;
+	border: 1px solid #000;
+	border-radius: 50px;
+}
+
+section.single-post .main .container-fluid .post-detail .post-option .like-post button {
+	background-color: transparent;
+	border: none;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	height: auto;
+	line-height: 1;
+}
+
+section.single-post .main .container-fluid .post-detail .post-option .like-post button.like {
+	border-right: 1px solid #000;
+}
+
+section.single-post .main .container-fluid .post-detail .post-option .share-post {
+	display: flex;
+	align-items: center;
+	height: 38px;
+	background-color: transparent;
+	padding-inline: 14px;
+	padding-block: 6px;
+	border: 1px solid #000;
+	border-radius: 50px;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 600;
+	line-height: 1;
 }
 
 section.single-post .main .container-fluid .product-desc h2 {
@@ -43,9 +151,27 @@ section.single-post .main .container-fluid .product-desc p {
 	text-shadow: 1px 1px 1px rgb(0 0 0 / 0%);
 }
 
-section.single-post .main .container-fluid .note h2 {
+section.single-post .main section.comments {
+	margin-bottom: 100px;
+}
+
+section.single-post .main section.comments .heading {
+	margin-bottom: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+section.single-post .main section.comments .heading h1 {
+	display: inline;
 	font-family: "ESAllianz-Regular", sans-serif;
 	font-size: 28px;
+	font-weight: 600;
+	line-height: 1.6;
+}
+
+section.single-post .main section.comments .note h2 {
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 24px;
 	font-weight: 600;
 	line-height: 1.6;
 }
@@ -120,12 +246,24 @@ section.single-post .sidebar .product-price p {
 	text-transform: uppercase;
 }
 
+section.single-post .sidebar .product-price span.initial-price {
+	display: flex;
+	float: left;
+	font-family: "ESAllianz-Regular", sans-serif;
+	font-size: 14px;
+	font-weight: 400;
+	height: auto;
+	line-height: 1.6;
+	text-transform: capitalize;
+	color: rgba(0, 0, 0, 0.6);
+}
+
 section.single-post .sidebar .product-price .suggested-price {
 	display: flex;
 	float: right;
 }
 
-section.single-post .sidebar .product-price span {
+section.single-post .sidebar .product-price span.suggested-price {
 	display: flex;
 	float: right;
 	font-family: "ESAllianz-Regular", sans-serif;
@@ -137,8 +275,8 @@ section.single-post .sidebar .product-price span {
 	color: rgba(0, 0, 0, 0.6);
 }
 
-section.single-post .sidebar .product-price .initial-price {
-	border-right: 1px solid #ebedee;
+section.single-post .sidebar .product-price .col-divider {
+	border-right: 1px solid #c7c7c7;
 }
 
 section.single-post .sidebar .buttons {
