--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,15 @@
 nav {
 	display: flex;
+	position: fixed;
+	top: 0;
+	width: 100%;
 	height: 60px;
 	font-family: "ESAllianz-Regular", sans-serif;
 	font-weight: 400;
 	font-style: normal;
 	background-color: #fff;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.1) !important;
+	z-index: 1;
 	/* border-bottom: 1px solid #000 !important; */
 }
 
