--- a/src/components/dailyfeedback/dailyfeedback.css
+++ b/src/components/dailyfeedback/dailyfeedback.css
@@ -35,6 +35,35 @@ section.daily-feedback .container-fluid .card {
 	border-radius: 12px;
 }
 
+section.daily-feedback .container-fluid .card .dark-layer {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.7;
+	border-radius: 12px;
+	z-index: 1;
+}
+
+section.daily-feedback .container-fluid .card .message {
+	position: absolute;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: 100%;
+	color: #fff;
+	font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-style: normal;
+	font-size: 20px;
+	font-weight: 600;
+	line-height: 20px;
+	letter-spacing: 0rem;
+	z-index: 2;
+}
+
 section.daily-feedback .container-fluid .card .card-body {
 	padding: 10px;
 }
