--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -36,6 +36,16 @@ nav .container-fluid {
 	justify-content: space-between;
 }
 
+@media only screen and (max-width: 768px) {
+	nav .container-fluid {
+		width: 100vw;
+		padding: 0 20px 0 30px;
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
+	}
+}
+
 nav .nav-brand p {
 	font-family: "Be Vietnam Pro", sans-serif;
 	font-size: 17px;
